# TrajPlanning

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Cost.cpp  Cost.h  ObsPen.cpp  ObsPen.h  Optimizer.cpp  Optimizer.h  SmoothnessMatrix.cpp  SmoothnessMatrix.h
tests/: CMakeLists.txt  TrajTest.cpp  empty1.map  obs1.map  obs2.map  obs3.map  render.py
